--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "19.1.1",
-    "react-native": "0.82.1",
     "@react-native/new-app-screen": "0.82.1",
     "firebase": "^10.12.5",
-    "react-native-document-picker": "^9.3.1",
+    "react": "19.1.1",
+    "react-native": "0.82.1",
+    "@react-native-documents/picker": "^12.0.1",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
